--- a/style.css
+++ b/style.css
@@ -6,13 +6,21 @@
 a{
   text-decoration: none;
 }
+header,nav,.main-visual,footer{
+  font-family: Chalkduster, "Bradley Hand", Courier, "Segoe Print", sans-serif;
+}
 header{
   width: 90%;
   padding: 15px 0;
-  margin 0 auto;
+  margin: 0 auto;
   text-align: center;
   position: relative;
 } 
+.social{
+  position: absolute;
+  top: 22px;
+  right: 22px;
+}
 .social i{
   display:inline-block;
   margin-left: 20px;
@@ -122,6 +130,13 @@ main{
 .sidebar-contents{
   padding: 50px 0;
 }
+/* 下のやつ入れられてなかった */
+.popular-text,
+.categories-text{
+  padding-bottom: 5px;
+  border-bottom: 1px solid #f7f7f7;
+  margin-bottom: 5px;
+}
 .popular-text:last-child,
 .categories-text:last-child{
   margin: 0;
@@ -133,7 +148,7 @@ main{
   flex-wrap: wrap;
 }
 .instagram-box{
-  width: 110ox;
+  width: 110px;
   padding-top: 110px;
   background-size: cover;
   background-position: center;
