--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ header{
   display:inline-block;
   margin-left: 20px;
 }
-.heading{
+header .heading{
   font-size: 32px;
 }
 .nav-list{
@@ -57,6 +57,9 @@ header{
   padding-top: 105px;
   color: white;
 }
+.main-visual-text{
+  color: #fff;
+}
 .main-visual-name{
   margin-top: 30px;
 }
@@ -76,13 +79,15 @@ main{
   text-align: center;
   line-height: 0.6;
 }
+.blog-box{
+  padding-top: 50px;
+}
 .blog-item{
   padding-bottom: 20px;
   margin-bottom: 20px;
   border-bottom: 1px solid #f7f7f7;
   display: flex;
   justify-content: flex-start;
-  padding-top: 50px;
 }
 .blog-image{
   height: 180px;
@@ -91,7 +96,7 @@ main{
   padding-top: 25px;
   padding-left: 30px;
 }
-.blog-text h3{
+.blog-text-heading{
   padding-bottom: 15px;
 }
 .blog-date{
@@ -186,4 +191,59 @@ footer{
 }
 .footer-text{
   color: #fff;
+}
+@media screen and (max-width:425px){
+  header{
+    width: 100%;
+  }
+  .nav-list{
+    width: 100%;
+  }
+  .nav-list-item{
+    width: 100%;
+    margin: 0 0 10px 0;
+  }
+  .social{
+    display: none;
+  }
+  .main-visual-content{
+    width: 100%;
+  }
+  .main{
+    width: 100%;
+    display: block;
+  }
+  .blog{
+    width: 100%;
+    margin: 0;
+  }
+  .blog-box{
+    padding-left: 2%;
+    padding-right: 2%;
+  }
+  .blog-image {
+    width: 49%;
+  }
+
+  .blog-text {
+    width: 49%;
+    padding-top: 5px;
+  }
+  .sidebar {
+    width: 100%;
+    padding-left: 3%;
+    padding-right: 3%;
+  }
+
+  .instagram-box {
+    width: 48%;
+    padding-top: 48%;
+  }
+  .instagram-box:nth-child(odd) {
+    margin-right: 4%;
+  }
+
+  .pagination {
+    margin-bottom: 50px;
+  }
 }
